# iphone-photos-sorter

./: .gitignore  README.md  cli.py  iphone_photos_sorter.py  mkdocs.yml  pyproject.toml
docs/: api_reference.md  index.md  usage.md
src/iphotocopy/: __main__.py  iphotocopy.py  iphotocopy_interface.py  iphotocopy_parser.py
tests/: test_iphotocopy.py
